--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
         <option>2012</option>
         <option>2013</option>
         <option>2014</option>
+        <option>2015</option>
       </select>
 
       <label for="to">
