--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,8 @@
         <option>2011</option>
         <option>2012</option>
         <option>2013</option>
-        <option selected>2014</option>
+        <option>2014</option>
+	<option selected>2015</option>
       </select>
 
       <div></div>
